gcc-defaults (1.123) UNRELEASED; urgency=low

  [ Aurelien Jarno ]
  * Enable gcc-multilib on sparc64.
  * Default to 4.8 for sparc64 architecture.
  * Default to 4.8 for s390 and s390x architectures.

  [ Matthias Klose ]
  * Default gcj to 4.8 on ia64 as well.

 -- Matthias Klose <doko@debian.org>  Sun, 30 Jun 2013 23:44:05 +0200

gcc-defaults (1.122) unstable; urgency=low

  [ Matthias Klose ]
  * Update maintainer list.
  * Default gccgo to 4.8 for every architecture (requiring 4.8.1-4).
  * Fix gccgo-multilib dependency (closes: #712266).
  * Default to 4.8 for m68k (Thorsten Glaser, Wouter Verhelst).
  * Build gcj packages for arm64.

  [ Aurelien Jarno ]
  * Default to 4.8 for mips and mipsel architectures.

 -- Matthias Klose <doko@debian.org>  Sun, 30 Jun 2013 23:33:50 +0200

gcc-defaults (1.121) unstable; urgency=low

  * Bump GCC 4.8 versions to 4.8.1.
  * Bump GCC 4.7 versions to 4.7.3.
  * Bump GCC 4.6 versions to 4.6.4.
  * Default to 4.8 for all x86 architectures.
  * Default to 4.8 for ARM architectures (agreed by the ARM porters).
  * Default gdc to 4.8 for every architecture.
  * Default gij/gcj to 4.8 for every architecture.
  * Stop building the gdc-v1 package.
  * Add support for x32 (Daniel Schepler). Closes: #692140.
  * Fix broken symlink in gcj-jre-headless. Closes: #710471.
  * Fix gcj package descriptions. Closes: #652495.

 -- Matthias Klose <doko@debian.org>  Wed, 12 Jun 2013 23:11:47 +0200

gcc-defaults (1.120) unstable; urgency=low

  * Bump GCC 4.7 versions to 4.7.2.
  * Don't try to update the libgcj-db database for 4.5, removed for
    the wheezy release. Closes: #620582, #626600.

 -- Matthias Klose <doko@debian.org>  Thu, 27 Sep 2012 02:00:03 +0200

gcc-defaults (1.119) unstable; urgency=low

  [ Matthias Klose ]
  * Bump gcc-4.7 version to 4.7.1.
  * Provide gcc-{ar,nm,ranlib} for architectures with 4.7 as the default.
  * Update README.Debian for Wheezy. Closes: #675026.

  [Hiroyuki Yamamoto]